--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ ul {
 .link {
   color: var(--color-primery-light);
   text-decoration: none;
+  transition-property: color;
+  transition-duration: 0.3s;
 }
 
 .link:hover {
@@ -96,9 +98,10 @@ ul {
 
 header {
   position: absolute;
-  top: 32px;
-  left: 90px;
-  right: 90px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
 }
 
 .header-container {
@@ -132,7 +135,13 @@ header {
 
 .hero-section {
   padding: 272px 0;
-  background-image: url(images/bag.jpg);
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url(images/bag.jpg);
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: top;
@@ -301,6 +310,11 @@ header {
     rgba(49, 38, 26, 0.71) 72.92%,
     var(--color-primery-dark) 100%
   );
+  transition: transform 0.3s;
+}
+
+.format-card:hover {
+  transform: scale(1.05);
 }
 
 .formats-container {
@@ -324,6 +338,10 @@ header {
   flex-shrink: 0;
 }
 
+.carousel-button.next {
+  transform: rotate(180deg);
+}
+
 .carousel-button:hover {
   background-color: var(--color-primery-dark);
   fill: var(--color-primery-light);
@@ -334,7 +352,9 @@ header {
 }
 
 .contact-title {
+  margin-bottom: 16px;
   padding: 16px;
+  padding-bottom: 0;
   padding-left: 0;
 }
 
@@ -450,6 +470,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 20px 10px;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 .backdrop.is-hidden {
@@ -459,15 +481,80 @@ header {
 }
 
 .modal {
-  width: 880px;
-  height: 880px;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
+  max-height: 880px;
+  padding: 128px;
   background-color: var(--color-primery-light);
   border-radius: 32px;
   position: relative;
+  overflow-y: auto;
 }
 
 .modal-btn-close {
   position: absolute;
   top: 40px;
   right: 80px;
+}
+
+/* form */
+.form-label {
+  position: absolute;
+  left: 42px;
+  top: 16px;
+  font-size: 16px;
+  line-height: 1.17;
+  color: #a18268;
+}
+
+.form-field {
+  margin-bottom: 32px;
+  position: relative;
+  font-size: 16px;
+  line-height: 1.17;
+}
+
+.input {
+  padding: 16px 42px;
+  font-size: 16px;
+  line-height: 1.17;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #a18268;
+  background-color: transparent;
+}
+
+.input:focus {
+  border-color: var(--color-brand);
+  outline: none;
+}
+
+.input::placeholder {
+  color: #a18268;
+  font-weight: 400;
+}
+
+.input:focus::placeholder {
+  color: var(--color-primery-dark);
+}
+
+.button-form {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 24px;
+}
+
+.form-terms {
+  margin: 0 auto;
+  max-width: 220px;
+  font-weight: 500;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.5;
+}
+
+.form-terms-link {
+  color: var(--color-primery-dark);
+  text-underline-offset: 2px;
 }
