--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,22 @@
 @import './utils/variables';
-
 @import './utils/base';
-
 @import './utils/utils';
-
 @import './utils/mixins';
+@import './utils/texts';
 
 
 @import './components/buttons';
 @import './components/links';
+@import './components/carusel';
+@import './components/paginations';
+
 @import './components/header';
+@import './components/mobile-menu';
 @import './components/hero';
 @import './components/advantages-section';
 @import './components/traditions-section';
 @import './components/chefs-section';
 @import './components/formats-section';
-@import './components/carusel';
 @import './components/contacts-section';
 @import './components/adressses';
 @import './components/footer';
