--- a/scss/utils/_base.scss
+++ b/scss/utils/_base.scss
@@ -6,10 +6,15 @@
 body {
   color: var(--color-primery-dark);
   font-family: 'Poppins', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
   line-height: 1.5;
   margin: 0;
+
+  @media screen and (min-width: $bp-tablet) {
+    font-size: 18px;
+    font-weight: 400; 
+  }
 }
 
 main {
@@ -24,6 +29,12 @@ h5,
 h6,
 p {
   margin-top: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 a {
@@ -41,25 +52,32 @@ ul {
 }
 
 .section {
-  padding: 48px 0;
+  padding: 20px; 
+  // margin-right: 20px;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding: 48px; 
+  }
+ 
+}
+
+.section__title {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 1.5;
+
+    @media screen and (min-width: $bp-tablet) {
+      font-size: 64px;
+      line-height: 1.3;
+    }
+}
+
+.centered {
+    text-align: center;
 }
 
 .container {
   width: 100%;
   max-width: 1288px;
   margin: 0 auto;
-}
-
-.section-title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
-
-.section-title.centered {
-  text-align: center;
-}
-
-.section-title .accent {
-  color: var(--color-brand-dark);
 }
