--- a/scss/components/_advantages-section.scss
+++ b/scss/components/_advantages-section.scss
@@ -1,16 +1,39 @@
-.advantages-list {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
-
-.advantages-item {
-  color: var(--color-primery-light);
-  font-size: 20px;
-  font-weight: 300;
-}
-
 .advantages-section {
-  background-color: var(--color-brand);
-  padding: 16px 0;
+  margin: 16px;
+  padding: 0;
+
+  @media screen and (min-width: $bp-tablet) {
+    background-color: var(--color-brand);
+    margin: 0;
+    padding: 16px 48px;
+  }
+
+  .advantages-section__list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 24px 40px;
+    background-color: var(--color-decorate);
+    border-radius: 24px;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 40px;
+      padding: 0 20px;
+      border-radius: 0;
+      background-color: transparent;
+    }
+  }
+
+  .advantages-section__item {
+    font-size: 14px;
+    font-weight: 300;
+
+    @media screen and (min-width: $bp-tablet) {
+      color: var(--color-primery-light);
+      font-size: 20px;
+      border-radius: 0;
+    }
+  }
 }
