--- a/scss/components/_chefs-section.scss
+++ b/scss/components/_chefs-section.scss
@@ -1,58 +1,97 @@
+.chefs-section {
+  .chefs-section__title {
+    margin: 0 auto 24px;
+    position: relative;
+
+    @media screen and (min-width: $bp-desctop) {
+      margin-bottom: 80px;
+    }
+  }
+}
+
 .chef-title {
-  font-size: 40px;
+  font-size: 24px;
   font-weight: 600;
   margin-bottom: 16px;
+
+  @media screen and (min-width: $bp-desctop) {
+    font-size: 40px;
+  }
 }
 
-.chefs-title {
-  margin: 0 auto 80px;
-  position: relative;
-}
-
-.chefs-title::before,
-.chefs-title::after {
+.chefs-section__title::before,
+.chefs-section__title::after {
+  display: none;
   width: 352px;
   border: 2px solid var(--color-decorate);
   content: '';
   bottom: 24px;
   position: absolute;
+
+  @media screen and (min-width: $bp-desctop) {
+    display: block;
+  }
 }
 
-.chefs-title::before {
+.chefs-section__title::before {
   left: 0;
 }
 
-.chefs-title::after {
+.chefs-section__title::after {
   right: 0;
 }
 
 .chef-photo {
+  width: 140px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 200px;
   box-shadow: -16px 16px 0 0 var(--color-primery-light),
     -16px 16px 0 2px var(--color-brand-normal);
+
+  @media screen and (min-width: $bp-desctop) {
+    width: 240px;
+  }
 }
 
 .chefs-list {
   display: flex;
-  column-gap: 30px;
+  flex-direction: column;
   flex-wrap: wrap;
-  row-gap: 40px;
+  gap: 20px;
+
+  @media screen and (min-width: $bp-tablet) {
+    column-gap: 30px;
+    row-gap: 40px;
+    flex-direction: row;
+  }
 }
 
 .chefs-item {
-  flex-basis: calc((100% - 30px) / 2);
+  
+  @media screen and (min-width: $bp-tablet) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 }
 
 .chef-card {
   display: flex;
-  gap: 30px;
+  gap: 16px;
+  align-items: flex-start;
+
+  @media screen and (min-width: $bp-desctop) {
+    gap: 30px;
+  }
 }
 
 .chef-text p {
+  font-size: 14px;
   margin-bottom: 24px;
+
+  @media screen and (min-width: $bp-desctop) {
+      font-size: 24px;
+  }
 }
 
 .chef-text p:last-child {
