--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  padding: 272px 0;
+  padding: 124px 0;
   background-image: linear-gradient(
       102.76deg,
       rgba(18, 18, 17, 0.78) 2.03%,
@@ -11,16 +11,42 @@
   background-position-x: center;
   background-position-y: top;
   background-size: cover;
-}
 
-.hero-title span {
-  color: var(--color-brand);
-}
+  @media screen and (min-width: $bp-desctop) {
+    padding: 272px 0;
+  }
 
-.hero-title {
-  margin-bottom: 0;
-  color: var(--color-primery-light);
-  text-align: center;
-  font-size: 128px;
-  font-weight: 900;
+  @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        102.76deg,
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 58.46%,
+        rgba(18, 18, 17, 0) 90.36%
+      ),
+      url(../images/bag2x.jpg);
+  }
+
+  .hero-section__title {
+    margin-bottom: 48px;
+    color: var(--color-primery-light);
+    text-align: center;
+    font-size: 67px;
+    line-height: 1;
+    font-weight: 900;
+
+    @media screen and (min-width: $bp-desctop) {
+      margin-bottom: 0;
+      font-size: 128px;
+      line-height: 1.5;
+    }
+  }
+
+  .hero-section__button {
+    margin: 0 auto;
+    @media screen and (min-width: $bp-desctop) {
+      display: none;
+    }
+  }
 }
