--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 10px;
+  padding: 20px;
   transition: opacity 0.3s, visibility 0.3s;
 }
 
@@ -23,15 +23,26 @@
   max-width: 880px;
   height: 100%;
   max-height: 880px;
-  padding: 128px 128px;
+  padding: 48px;
   background-color: var(--color-primery-light);
   border-radius: 32px;
   position: relative;
   overflow-y: auto;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding: 128px;
+  }
 }
 
 .modal-btn-close {
   position: absolute;
   top: 40px;
   right: 80px;
+}
+
+.modal__form-field {
+  margin-bottom: 32px;
+  position: relative;
+  font-size: 16px;
+  line-height: 1.17;
 }
