--- a/scss/components/_traditions-section.scss
+++ b/scss/components/_traditions-section.scss
@@ -1,30 +1,35 @@
-.traditions-title {
-  margin-bottom: 42px;
-}
-
-.traditions-text .brand {
-  color: var(--color-brand);
-  font-weight: 600;
-}
-
-.traditions-text .uppercase {
-  text-transform: uppercase;
-}
-
 .traditions-text.limited {
   max-width: 340px;
 }
 
-.traditions-content {
-  max-width: 710px;
-}
-
 .traditions-section {
-  padding-top: 96px;
+  padding-top: 40px;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding-top: 96px;
+  }
+
+  .traditions-section__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  .traditions-section__content {
+    max-width: 710px;
+  }
+
+  .traditions-section__title {
+    margin-bottom: 42px;
+  }
+
+  .traditions-section__img{
+    display: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: block;
+    }
+  }
 }
 
-.traditions-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
